添加光标效果

--- a/docs/algorithm/leetcode/06-Z字形变换.md
+++ b/docs/algorithm/leetcode/06-Z字形变换.md
@@ -1,13 +1,13 @@
 ---
-title: 算法
-author: kjinbo
+title: 06-Z字形变换
+author: kebobo
 date: '2022-02-22'
 ---
 
-## 06-Z字形变换
+## 题解
 
-```html
-var covert = function(s, numRows) {
+```js
+var covert = function (s, numRows) {
   if (numRows <= 1) return s;
 
   let items = [];
@@ -34,6 +34,8 @@ var covert = function(s, numRows) {
     }
   }
   console.log(items);
-}
+};
 const sss = covert('0123456789', 4);
 ```
+
+## 思路
