Revert "添加光标效果"
This reverts commit d024e800254d84e91b3dfb945280deef20beb0c4.

--- a/docs/algorithm/leetcode/06-Z字形变换.md
+++ b/docs/algorithm/leetcode/06-Z字形变换.md
@@ -1,13 +1,13 @@
 ---
-title: 06-Z字形变换
-author: kebobo
+title: 算法
+author: kjinbo
 date: '2022-02-22'
 ---
 
-## 题解
+## 06-Z字形变换
 
-```js
-var covert = function (s, numRows) {
+```html
+var covert = function(s, numRows) {
   if (numRows <= 1) return s;
 
   let items = [];
@@ -34,8 +34,6 @@ var covert = function (s, numRows) {
     }
   }
   console.log(items);
-};
+}
 const sss = covert('0123456789', 4);
 ```
-
-## 思路
