--- a/docs/algorithm/leetcode/06-Z字形变换.md
+++ b/docs/algorithm/leetcode/06-Z字形变换.md
@@ -4,6 +4,10 @@ author: kebobo
 date: '2022-02-22'
 ---
 
+![图片](../850ffbf6-7095-4f65-96b7-acb2f974e7f2.png)
+
+[test](/algorithm/leetcode/assests/test.docx)
+
 ## 题解
 
 ```js
