--- a/docs/algorithm/leetcode/06-Z字形变换.md
+++ b/docs/algorithm/leetcode/06-Z字形变换.md
@@ -4,9 +4,9 @@ author: kebobo
 date: '2022-02-22'
 ---
 
-![图片](../850ffbf6-7095-4f65-96b7-acb2f974e7f2.png)
+<!-- ![图片](../850ffbf6-7095-4f65-96b7-acb2f974e7f2.png)
 
-[test](./assests/测试.docx)
+[test](./assests/测试.docx) -->
 
 ## 题解
 
