--- a/docs/js/you-not-know-js-1/声明提升.md
+++ b/docs/js/you-not-know-js-1/声明提升.md
@@ -80,7 +80,8 @@ function foo () { console.log(3); }
 ```
 
 总结：
-1，函数优先提升，然后才是普通变量
-2，相同var变量名跟函数名，var的声明会被忽略。
-3，相同函数名，后者覆盖前者。
-4，let和const会劫持提升
+
+1. 函数优先提升，然后才是普通变量
+2. 相同var变量名跟函数名，var的声明会被忽略。
+3. 相同函数名，后者覆盖前者。
+4. let和const会劫持提升
