--- a/docs/js/you-not-know-js-1/编译原理.md
+++ b/docs/js/you-not-know-js-1/编译原理.md
@@ -49,7 +49,7 @@ V8之前，解释器会把AST直接转成机器码，这个过程存在一定的
 
 ## 总结
 
-- 编译大体有三个步骤，语法/词法分析、生成抽象语法树、根据AST程序机器码
-- V8引擎在生成机器码的步骤，对比以往做了优化，引入了【字节码】。
-  - 根据 AST 生成字节码，同时分析数据，对执行多次的代码进行记录。
-  - 根据字节码，以及分析数据生成机器码。下一次遇到相同代码直接执行机器码。
+1. 编译大体有三个步骤，语法/词法分析、生成抽象语法树、根据AST程序机器码
+2. V8引擎在生成机器码的步骤，对比以往做了优化，引入了【字节码】。
+   - 根据 AST 生成字节码，同时分析数据，对执行多次的代码进行记录。
+   - 根据字节码，以及分析数据生成机器码。下一次遇到相同代码直接执行机器码。
