--- a/docs/js/you-not-know-js-1/作用域.md
+++ b/docs/js/you-not-know-js-1/作用域.md
@@ -35,7 +35,7 @@ if (true) {
 console.log(a); // 123
 ```
 
-值得注意的是，在try/catch中。虽然 try/catch 语句中声明的变量会被绑定到外部作用域，但是catch他是有一个自己的作用域的，他捕获到的异常只能在内部访问，外部无法访问到。
+值得注意的是，在try/catch中。虽然 try/catch 语句中声明的变量会被绑定到外部作用域，但是catch他是有一个自己的作用域的，他捕获到的异常只能在内部访问，外部无法访问到。同理还有with关键字也有属于自己的作用域。
 
 ```javascript
 try {
