--- a/docs/js/you-not-know-js-1/书中方法的模拟实现集.md
+++ b/docs/js/you-not-know-js-1/书中方法的模拟实现集.md
@@ -6,7 +6,7 @@ date: '2023-10-21'
 
 ## api 模拟实现
 
-### new 模拟实现
+### 1. new 模拟实现
 
 功能描述：
 
@@ -26,7 +26,7 @@ function newFactory() {
 }
 ```
 
-### Function.prototype.call 模拟实现
+### 2. Function.prototype.call 模拟实现
 
 call 的功能描述：
 
@@ -53,7 +53,7 @@ Function.prototype.myCall = function (context) {
 
 需要注意上面实现中只是简单实现，还没对原始值(字面量的字符串，数字等)进行处理。
 
-### Function.prototype.bind 模拟实现
+### 3. Function.prototype.bind 模拟实现
 
 MDN 描述：
 
@@ -93,7 +93,7 @@ if (!Function.prototype.bind) {
 }
 ```
 
-### 函数柯里化
+### 4. 函数柯里化
 
 ```javascript
 function sub_curry(fn) {
@@ -127,7 +127,7 @@ console.log(fn(12,23)(45));
 console.log(fn(12)(4)(1));
 ```
 
-### Object.create()的 polyfill 代码
+### 5. Object.create()的 polyfill 代码
 
 功能描述：
 
