--- a/docs/view/js/you-not-know-js-1/3. 作用域.md
+++ b/docs/view/js/you-not-know-js-1/3. 作用域.md
@@ -4,26 +4,42 @@ author: kebobo
 date: '2023-10-10'
 ---
 
+## 函数作用域
+
+函数作为 JS 的一等公民，它有属于自己的一个作用域空间。
+
+函数作用域的含义是指，属于这个函数的全部变量都可以在整个函数的范围内使用及复用，当然嵌套在里面的作用域也可以使用。
+
 ## 块作用域
 
-注意：**JS中是没有块作用域功能的**，虽然JS中没有块作用域功能，不过具备块**作用域风格**的语句我们通常会写到，比如：
+注意：**JS 中是没有块作用域功能的**，虽然 JS 中没有块作用域功能，不过具备块**作用域风格**的语句我们通常会写到，比如：
 
 ```javascript
-for (var i = 0; i < 2; i++) { console.log(i); }
+for (var i = 0; i < 2; i++) {
+  console.log(i);
+}
 
-if(true) { var a = 123; console.log(a); }
+if (true) {
+  var a = 123;
+  console.log(a);
+}
 
-while(true) { var a = 123; console.log(a); }
+while (true) {
+  var a = 123;
+  console.log(a);
+}
 
 try {
   var a = 123;
   console.log(a);
-} catch (e) { console.log(e); }
+} catch (e) {
+  console.log(e);
+}
 ```
 
 上述代码中，他们在**别的语言里**面，都是可以产生块作用域效果的，这些内部变量会被绑定在块里面，不会被外部访问到。
 
-然而在JS中他们会被绑定到外部作用域，这难免会使得里面的变量污染到外部作用域。所以在写这代码的时候需要我们额外小心，避免语句内部的变量跟外部作用域的变量发生冲突。
+然而在 JS 中他们会被绑定到外部作用域，这难免会使得里面的变量污染到外部作用域。所以在写这代码的时候需要我们额外小心，避免语句内部的变量跟外部作用域的变量发生冲突。
 
 产生冲突的例子：
 
@@ -35,7 +51,7 @@ if (true) {
 console.log(a); // 123
 ```
 
-值得注意的是，在try/catch中。虽然 try/catch 语句中声明的变量会被绑定到外部作用域，但是catch他是有一个自己的作用域的，他捕获到的异常只能在内部访问，外部无法访问到。同理还有with关键字也有属于自己的作用域。
+值得注意的是，在 try/catch 中。虽然 try/catch 语句中声明的变量会被绑定到外部作用域，但是 catch 他是有一个自己的作用域的，他捕获到的异常只能在内部访问，外部无法访问到。同理还有 with 关键字也有属于自己的作用域。
 
 ```javascript
 try {
@@ -50,21 +66,21 @@ console.log(c); // 456
 console.log(err); // ReferenceError: err is not defined
 ```
 
-## let和const
+## let 和 const
 
-尽管上述中存在着奇怪行为，但是JS开发者还是会把他们当做块作用域使用。
+尽管上述中存在着奇怪行为，但是 JS 开发者还是会把他们当做块作用域使用。
 
-所幸，在ES6中，引入了新的关键字 let、const。这是除了var以为的另外两种变量声明方式。
+所幸，在 ES6 中，引入了新的关键字 let、const。这是除了 var 以为的另外两种变量声明方式。
 
-let关键字可以将变量绑定到所在的任意作用域中（通常是{ .. }内部）。换句话说，let为其声明的变量隐式地劫持了所在的块作用域。
+let 关键字可以将变量绑定到所在的任意作用域中（通常是{ .. }内部）。换句话说，let 为其声明的变量隐式地劫持了所在的块作用域。
 
 ```javascript
 var foo = true;
-if(foo) {
+if (foo) {
   let bar = 123;
-  console.log(bar);  // 123
+  console.log(bar); // 123
 }
 console.log(bar); // ReferenceError: bar is not defined
 ```
 
-const关键字跟let作用基本一样，都可以将变量绑定到所在的作用域中。唯一的区别是，const声明的变量是一个常量，他不能被修改。
+const 关键字跟 let 作用基本一样，都可以将变量绑定到所在的作用域中。唯一的区别是，const 声明的变量是一个常量，他不能被修改。
