--- a/docs/view/js/you-not-know-js-1/4. 声明提升.md
+++ b/docs/view/js/you-not-know-js-1/4. 声明提升.md
@@ -4,7 +4,8 @@ author: kebobo
 date: '2023-10-11'
 ---
 
-> JS是一门函数式编程语言，函数的优先级是最高的。就好像之前ES6还没引入let和const时，函数被作为特有的作用域单元一样。
+> JS 是一门函数式编程语言，函数的优先级是最高的。就好像之前 ES6 还没引入 let 和 const 时，函数被作为特有的作用域单元一样。
+>
 > 同理在声明提升这里，函数的声明提升优先于变量的提升。
 
 ## 编译器的工作
@@ -15,7 +16,7 @@ date: '2023-10-11'
 
 因此，这里正确的理解思路是，包括变量和函数在内的所有声明都会在任何代码被执行前首先被处理。
 
-当你看到 var a = 2; 时，JS会将其看成两个声明：var a; 和 a = 2;。第一个定义声明是在编译阶段进行的，第二个赋值声明会被停留在原地等待执行阶段。
+当你看到 var a = 2; 时，JS 会将其看成两个声明：var a; 和 a = 2;。第一个定义声明是在编译阶段进行的，第二个赋值声明会被停留在原地等待执行阶段。
 
 ```javascript
 console.log(a); // undefined
@@ -38,13 +39,17 @@ a = 2; // 赋值留在原地等待执行
 
 ```javascript
 foo(); // 1
-function foo () { console.log(1) }
+function foo() {
+  console.log(1);
+}
 ```
 
 引擎会理解为如下形式：
 
 ```javascript
-function foo () { console.log(1) } // 被提到最前面
+function foo() {
+  console.log(1);
+} // 被提到最前面
 foo(); // 1
 ```
 
@@ -52,36 +57,50 @@ foo(); // 1
 
 ```javascript
 foo(); // 1
-function foo () { console.log(1); }
-var foo = function () {console.log(2)}
+function foo() {
+  console.log(1);
+}
+var foo = function () {
+  console.log(2);
+};
 foo(); // 2
 ```
 
 引擎会理解为如下形式：
 
 ```javascript
-function foo () { console.log(1); } // 被提升到前面
+function foo() {
+  console.log(1);
+} // 被提升到前面
 foo(); // 1
-foo = function () {console.log(2)}
+foo = function () {
+  console.log(2);
+};
 foo(); // 2
 
 // 注意，这里var foo;没有被提升（被忽略了）
 ```
 
-因为函数声明会被提升到普通变量之前，加上 var foo跟函数foo属于重复的声明，这里var foo会被忽略。
+因为函数声明会被提升到普通变量之前，加上 var foo 跟函数 foo 属于重复的声明，这里 var foo 会被忽略。
 
-尽管重复的var声明会被忽略掉，但如果现在出现的函数名是相同的函数名，后面的函数名会覆盖前面的
+尽管重复的 var 声明会被忽略掉，但如果现在出现的函数名是相同的函数名，后面的函数名会覆盖前面的
 
 ```javascript
 foo(); // 3
-function foo () { console.log(1); }
-var foo = function () {console.log(2)}
-function foo () { console.log(3); }
+function foo() {
+  console.log(1);
+}
+var foo = function () {
+  console.log(2);
+};
+function foo() {
+  console.log(3);
+}
 ```
 
 总结：
 
 1. 函数优先提升，然后才是普通变量
-2. 相同var变量名跟函数名，var的声明会被忽略。
+2. 相同 var 变量名跟函数名，var 的声明会被忽略。
 3. 相同函数名，后者覆盖前者。
-4. let和const会劫持提升
+4. let 和 const 会劫持提升
