--- a/docs/view/js/you-not-know-js-1/5. 闭包.md
+++ b/docs/view/js/you-not-know-js-1/5. 闭包.md
@@ -4,7 +4,13 @@ author: kebobo
 date: '2023-10-11'
 ---
 
-> 当函数可以记住并访问所在的词法作用域时，就产生了闭包，即使函数是在当前词法作用域之外执行。
+> 之前的函数作用域中我们介绍，函数作用域是指函数内部的变量方法可以在函数内部使用，而无法被外部访问。
+>
+> 当另一个函数可以记住并访问所在的词法作用域时，就产生了闭包。
+>
+> 无论通过何种手段将内部函数传递到所在的词法作用域以外，它都会持有对原始定义作用域的引用，无论在何处执行这个函数都会使用闭包。
+>
+> 产生了闭包效果，还有一个神奇之处就是可以防止垃圾回收机制对持有的词法作用域进行释放。
 
 ## 理解闭包
 
@@ -21,6 +27,20 @@ var baz = foo();
 baz(); // 2  这就是闭包的效果。
 ```
 
-理解：小明家在广东深圳，他能跟这块区域的亲朋好友保持联系，并且找到他们。后来小明离开了广东深圳，但是小明依旧能和他的亲朋好友保持联系。
+foo 函数的词法作用域在这个过程中保持完整。
+
+理解：张三家在广东深圳，他能跟这块区域的亲朋好友保持联系，并且找到他们。后来张三离开了广东深圳，但是小明依旧能和他的亲朋好友保持联系。
 
 ## 闭包的使用场景
+
+1，在定时器、事件监听器、Ajax请求、跨窗口通信、Web Workers或者任何其他的异步（或者同步）任务中，只要使用了回调函数，实际上就是在使用闭包！
+
+2，IIFE立即执行函数。虽然按照上面对闭包的描述，IIFE的使用场景看起来不像是产生了闭包，当实际上是有的。
+
+```javascript
+var a = 2;
+
+(function IIFE() {
+  console.log(a);
+})();
+```
