--- a/docs/view/js/you-not-know-js-1/书中方法的模拟实现集.md
+++ b/docs/view/js/you-not-know-js-1/书中方法的模拟实现集.md
@@ -67,16 +67,16 @@ Function 实例的 bind() 方法创建一个新函数，当调用该新函数时
 
 ```javascript
 if (!Function.prototype.bind) {
-  Function.prototype.bind = function(context){
-    if(typeof this !== 'function') {
-      throw new TypeError("");
+  Function.prototype.bind = function (context) {
+    if (typeof this !== 'function') {
+      throw new TypeError('');
     }
     // 获取绑定函数。
     // 根据this绑定规则，由上下文调用，this绑定到上下文对象。这里this绑定到函数上。
     var fToBind = this;
     var fArgs = Array.prototype.slice.call(arguments, 1); // 取得[第二个, ...最后面一个]的参数
-    var fNOP = function() {}; // 空函数中转，防止实例化后，通过修改fBound.prototype，影响到绑定函数
-    var fBound = function() {
+    var fNOP = function () {}; // 空函数中转，防止实例化后，通过修改fBound.prototype，影响到绑定函数
+    var fBound = function () {
       var fBArgs = Array.prototype.slice.call(arguments); // 获取传个 fBound 的所有尝试。
       // 当作为构造函数时，this 指向实例，此时结果为 true，将绑定函数的 this 指向该实例，可以让实例获得来自绑定函数的值
       // 当作为普通函数时，this 指向 window，此时结果为 false，将绑定函数的 this 指向 context
@@ -120,10 +120,10 @@ function curry(fn, length) {
   };
 }
 
-var fn = curry(function(a, b, c) {
-    return a + b + c;
+var fn = curry(function (a, b, c) {
+  return a + b + c;
 });
-console.log(fn(12,23)(45));
+console.log(fn(12, 23)(45));
 console.log(fn(12)(4)(1));
 ```
 
