--- a/docs/view/js/you-not-know-js-1/6. 动态作用域与词法作用域.md
+++ b/docs/view/js/you-not-know-js-1/6. 动态作用域与词法作用域.md
@@ -4,7 +4,8 @@ author: kebobo
 date: '2023-10-11'
 ---
 
-> JS中的作用域就是词法作用域（事实上大部分语言都是基于词法作用域的）。
+> JS 中的作用域就是词法作用域（事实上大部分语言都是基于词法作用域的）。
+>
 > 词法作用域意味着作用域是由**书写代码时函数声明的位置**来决定的。
 
 词法作用域的效果：
@@ -23,13 +24,13 @@ var a = 2;
 bar();
 ```
 
-上述代码foo()调用之后，a会在全局作用域中被查找到。因为foo函数定义在了全局作用域里面。
+上述代码 foo()调用之后，a 会在全局作用域中被查找到。因为 foo 函数定义在了全局作用域里面。
 
-动态作用域（JS没有，但是JS中的this关键字会有这种表现）：
+动态作用域（JS 没有，但是 JS 中的 this 关键字会有这种表现）：
 
 ```javascript
 function foo() {
-  console.log(a); // 3（不是2！）
+  console.log(a); // 3（动态作用域下 => 不是2！）
 }
 
 function bar() {
@@ -41,4 +42,4 @@ var a = 2;
 bar();
 ```
 
-上述代码foo()调用之后，a会在当前调用的地方被查找到。即在bar函数的作用域里面找到了a的变量。
+上述代码 foo()调用之后，a 会在当前调用的地方被查找到。即在 bar 函数的作用域里面找到了 a 的变量。
