--- a/docs/view/js/you-not-know-js-1/第二部分—4. 原型.md
+++ b/docs/view/js/you-not-know-js-1/第二部分—4. 原型.md
@@ -4,7 +4,7 @@ author: kebobo
 date: '2023-10-21'
 ---
 
-所有函数都会拥有一个名为prototype的公有并且不可枚举的属性。它会指向一个对象：
+所有函数都会拥有一个名为 prototype 的公有并且不可枚举的属性。它会指向一个对象：
 
 ```javascript
 function Foo() {}
@@ -17,7 +17,7 @@ f.constructor; // Foo() {}
 f.constructor === Foo.prototype.constructor; // true
 ```
 
-构造出来的对象f，本身没有.construtor属性，它是存在于Foo.prototype上，当我们访问这个属性的时候，就会通过委托的形式，委托\[\[Prototype\]\]链上的Foo.prototype帮忙查找。其它属性也是如此，如果没有找到，就会继续在原型链上继续委托，直到顶端的Object.prototype上，如果顶端都没有就返回undefined。
+构造出来的对象 f，本身没有.construtor 属性，它是存在于 Foo.prototype 上，当我们访问这个属性的时候，就会通过委托的形式，委托\[\[Prototype\]\]链上的 Foo.prototype 帮忙查找。其它属性也是如此，如果没有找到，就会继续在原型链上继续委托，直到顶端的 Object.prototype 上，如果顶端都没有就返回 undefined。
 
 我们可以这样将对象之间建立联系，实现“继承”：
 
@@ -26,22 +26,22 @@ function Foo(name) {
   this.name = name;
 }
 
-Foo.prototype.myName = function() {
-  return this.name
-}
+Foo.prototype.myName = function () {
+  return this.name;
+};
 
 function Bar(name, label) {
   Foo.call(this, name); // 调用Foo，同时将当前this绑定到Foo的作用域
-  this.label = label
+  this.label = label;
 }
 
 // 注意这里！！
 // 我们将Foo的原型关联到了Bar的原型上了。
 Bar.prototype = Object.create(Foo.prototype);
 
-Bar.prototype.myLabel = function() {
+Bar.prototype.myLabel = function () {
   return this.label;
-}
+};
 
 var a = new Bar('a', 'obj a');
 a.myName(); // 'a'
@@ -56,21 +56,21 @@ a.constructor === Foo.prototype.constructor; // true
 a.constructor === Bar.prototype.constructor; // false
 ```
 
-对象中这种类似继承（或者说复制）的行为，用“委托”去描述更为贴切。我们通过\[\[Get\]\]在原型链上查找属性，实际就是在委托原型链帮我们去找。我们可以理解 obj.__proto__ === Foo.prototype ，实际是把__proto__指向到了Foo.prototype上，查找时也通过委托，在这条链上进行查找，显然它并不是一个继承（或者说复制）行为。
+对象中这种类似继承（或者说复制）的行为，用“委托”去描述更为贴切。我们通过\[\[Get\]\]在原型链上查找属性，实际就是在委托原型链帮我们去找。我们可以理解 obj.**proto** === Foo.prototype ，实际是把**proto**指向到了 Foo.prototype 上，查找时也通过委托，在这条链上进行查找，显然它并不是一个继承（或者说复制）行为。
 
 当对象调用一个本身不存在，而存在于原型上的方法时，我们可以通过内部委托来实现，这样使我们代码逻辑更清晰：
 
 ```javascript
 var obj = {
-  cool: function() {
-    console.log("Cool!");
-  }
-}
+  cool: function () {
+    console.log('Cool!');
+  },
+};
 
 var myObj = Object.create(obj);
-myObj.doCool = function() {
+myObj.doCool = function () {
   // myObj上本身没有 cool方法，但是原型链上有
-  this.cool(); // 这就是 内部委托！ 
-}
+  this.cool(); // 这就是 内部委托！
+};
 myObj.doCool();
 ```
