--- a/docs/view/js/you-not-know-js-1/第二部分—5. 行为委托.md
+++ b/docs/view/js/you-not-know-js-1/第二部分—5. 行为委托.md
@@ -5,7 +5,8 @@ date: '2023-10-22'
 ---
 
 > 1、委托行为意味着某些对象在找不到属性或者方法引用时会把这个请求委托给另一个对象。
-> 2、在API接口设计中，委托最好在内部实现，不要直接暴露出去。
+>
+> 2、在 API 接口设计中，委托最好在内部实现，不要直接暴露出去。
 
 原型面向对象编程思维：
 
@@ -13,8 +14,8 @@ date: '2023-10-22'
 function Foo(who) {
   this.me = who;
 }
-Foo.prototype.identify = function() {
-  return "I am " + this.me;
+Foo.prototype.identify = function () {
+  return 'I am ' + this.me;
 };
 
 function Bar(who) {
@@ -22,12 +23,12 @@ function Bar(who) {
 }
 Bar.prototype = Object.create(Foo.prototype);
 
-Bar.prototype.speak = function() {
-  alert("Hello, " + this.identify() + ".");
+Bar.prototype.speak = function () {
+  alert('Hello, ' + this.identify() + '.');
 };
 
-var b1 = new Bar("b1");
-var b2 = new Bar("b2");
+var b1 = new Bar('b1');
+var b2 = new Bar('b2');
 
 b1.speak();
 b2.speak();
@@ -37,26 +38,26 @@ b2.speak();
 
 ```javascript
 Foo = {
-  init: function(who) {
+  init: function (who) {
     this.me = who;
   },
-  identify: function() {
-    return "I am " + this.me;
-  }
+  identify: function () {
+    return 'I am ' + this.me;
+  },
 };
 Bar = Object.create(Foo);
 
-Bar.speak = function() {
-  alert("Hello, " + this.identify() + ".");
+Bar.speak = function () {
+  alert('Hello, ' + this.identify() + '.');
 };
 
 var b1 = Object.create(Bar);
-b1.init("b1");
+b1.init('b1');
 var b2 = Object.create(Bar);
-b2.init("b2");
+b2.init('b2');
 
 b1.speak();
 b2.speak();
 ```
 
-书中作者认为JS中对象关联比类风格的代码更简洁（而且功能相同）。
+书中作者认为 JS 中对象关联比类风格的代码更简洁（而且功能相同）。
