--- a/docs/view/js/you-not-know-js-2/书中提及的问题的解决方法集.md
+++ b/docs/view/js/you-not-know-js-2/书中提及的问题的解决方法集.md
@@ -4,7 +4,7 @@ author: kebobo
 date: '2023-11-15'
 ---
 
-## 竞态模式下的Promise超时模式
+## 竞态模式下的 Promise 超时模式
 
 ```javascript
 function timeoutPromise(delay) {
@@ -15,7 +15,65 @@ function timeoutPromise(delay) {
   });
 }
 // 三秒超时。
-Promise.race([foo(), timeoutPromise(3000)]).then(function () {}，function (err) {
+Promise.race([foo(), timeoutPromise(3000)]).then(function () {
+
+}，function (err) {
   // foo 被拒绝，或者是超时没完成。
 });
+```
+
+## Promise APi all([..])和 race([..])的变体
+
+这些变体并不是 ES 提供的，还需要自行实现
+
+- none([..]) 所有的 Promise 都要被拒绝，即拒绝转化为完成值，反之亦然。
+- any([..]) 这个模式与 all([..])类似，但是会忽略拒绝，所以只需要完成一个而不是全部。
+- first([..]) 这个模式类似于 any([..])的竞争，即只要第一个 Promise 完成，就忽略后续的任何拒绝和完成。
+- last([..]) 这个模式类似于 first([..])，最后一个完成胜出。
+
+```javascript
+// polyfill安全的guard检查
+if (!Promise.first) {
+  Promise.first = function (prs) {
+    return new Promise(function (resolve, reject) {
+      // 在所有promise上循环
+      prs.forEach(function (pr) {
+        // 把值规整化
+        Promise.resolve(pr)
+          // 不管哪个最先完成，就决议主promise
+          .then(resolve);
+      });
+    });
+  };
+}
+```
+
+## Promise 工厂化
+
+有时，我们可能修改到在当时来首还未支持 Promise 的 Ajax 回调，同时我们有希望这些代码转化为基于 Promise，当然 Promise 没有明确表示要如何实现转化，所以我们只能自己转：
+
+```javascript
+if (!Promise.wrap) {
+  Promise.wrap = function (fn) {
+    return function () {
+      var args = Array.prototype.slice.call(arguments);
+      return new Promise(function (resolve, reject) {
+        fn.apply(
+          null,
+          args.concat(function (err, v) {
+            if (err) {
+              reject(err);
+            } else {
+              resolve(v);
+            }
+          });
+        );
+      });
+    };
+  };
+}
+
+// 使用
+var request = Promise.wrap(ajax);
+request('http://some.url.com').then(..)
 ```
