--- a/docs/view/js/you-not-know-js-2/第二部分—3. Promise.md
+++ b/docs/view/js/you-not-know-js-2/第二部分—3. Promise.md
@@ -4,9 +4,11 @@ author: kebobo
 date: '2023-11-15'
 ---
 
+> 术语：决议（resolve）、完成（fulfill）以及拒绝（reject）。这里的决议（resolve）和 Promise 回调里面的 resolve 函数不一样。决议是 完成（fulfill）以及拒绝（reject）之后的结果。前者是函数名，后者是 Promise 的结果，需要区分开来。
+
 一个 Promise 决议后，这个 Promise 上所有的通过 then()注册的回调都会在下一个异步时机点上依次被立即执行。
 
-### 未能传递参数/环境值
+## 未能传递参数/环境值
 
 Promise 至多只能有一个决议值（resolve 或 reject）。如果你没有任何值显示决议，那么这个值就是 undefined。
 
@@ -27,4 +29,70 @@ p.then((res) => {
 // 控制台输出：
 // 'hello'
 // 1
+```
+
+## 可信任的 Promise 问题
+
+### thenable
+
+### 完全可信任的 Promise.resolve()
+
+### 链式流程控制可行的 Promise 固有特性
+
+- 调用 Promise 的 then()会自动创建一个新的 Promise 从调用返回。
+- 在完成或拒绝处理函数内部，如果返回一个值或抛出异常，新返回的（可链接的）Promise 就相应地决议。
+- 如果完成或拒绝处理函数返回一个 Promise，它将会被展开，这样一来，不管它的决议值是什么，都会成为当前 then()返回的链接 Promise 的决议值。
+
+## Promise 的基本用法
+
+### Promise.all([..])
+
+多个异步任务同时执行，返回异步结果集。列表中有任何一个被拒绝，主 Promise.all([..])就会立即被拒绝。
+
+Promise.all([..])中的值可以是 Promise、thenable，甚至是立即值。就本质而言，列表中的每个值都会通过 Promise.resolve(..)过滤，以确保要等待的是一个真正的 Promise，所以立即值会被规范化为为这个值构建的 Promise。
+
+## Promise 局限性
+
+### 顺序错误处理
+
+```javascript
+const p = Promise.resolve(42)
+  .then((res) => {
+    return 1;
+  })
+  .then((res) => {
+    err(); // 制造一个错误
+  })
+  .then(
+    (res) => {
+      // 上面有错误，永远不会执行到这里
+      console.log(res);
+    },
+    // reject 中 return 了 这个决议值
+    (err) => 2;
+  )
+  .then((res) => Promise.resolve(res));
+
+console.log(p); // Promise {<fulfilled>: 2}
+```
+
+我们发现第二个 then 中我们制造的错误被吞并了，当调用`p.catch(err => console.log(err))`，我们无法获取到通知。这原因当然是我们对这个错误进行了处理，reject 中 return 了 2，这可能是我们需要的。但是这也是一个局限性，因为我们将无法确认具体的错误信息。
+
+### 单一值
+
+根据定义，Promise 只能有一个完成值或一个拒绝理由。
+
+似乎在一个 Promise 中获取两个异步值是比较麻烦的事，好在 Promise.all()中可以帮我们实现这个功能。不过避免不要需要定义两个独立的 Promise，然后在调用 Promise.all()。
+
+#### 展开/传递参数
+
+当我们用 Promise.all()时，我们会得到一个数组结果。正因为这个数组结果，让我们赋值操作仍然是麻烦的开销。`（var x = .. ; var y = ..; ...）`。
+
+ES6 提供了数组参数解构形式帮了我们解决这个问题：
+
+```javascript
+// p1, p2 是伪代码，是预先定义好的promise
+Promise.all([p1, p2]).then(function ([x, y]) {
+  console.log(x, y);
+});
 ```
