--- a/docs/view/js/you-not-know-js-2/第二部分—5. 程序性能.md
+++ b/docs/view/js/you-not-know-js-2/第二部分—5. 程序性能.md
@@ -5,3 +5,14 @@ date: '2023-12-12'
 ---
 
 前面篇章中，我们说到异步模式，以及异步模式下，能帮我们在代码层级提升页面性能。本篇章将在程序级别上讨论更大图景下的性能细节。
+
+## Web Worker
+
+Web Worker通常应用于哪些方面呢？
+
+- 处理密集型数学计算
+- 大数据集排序
+- 数据处理（压缩，音频分析，图像处理等）
+- 高流量网络通信
+
+## SIMD
