--- a/docs/view/js/vue设计与实现/第1章—权衡的艺术.md
+++ b/docs/view/js/vue设计与实现/第1章—权衡的艺术.md
@@ -3,3 +3,95 @@ title: 第1章—权衡的艺术
 author: kebobo
 date: '2023-12-15'
 ---
+
+## 运行时和编译时
+
+设计框架时，我们有三种选择：纯运行时的、运行时 + 编译时的、纯编译时的。这需要你根据目标框架的特征，以及对框架的期望，做出合适的决策。
+
+### 纯运行时框架
+
+这种框架通常提供一个 Render 函数，同时用户为函数提供一个树型结构的数据对象。
+
+```javascript
+// 用户需要编写的树型结构
+const obj = {
+  tag: 'div',
+  children: [{ tag: 'span', children: 'hello world' }],
+};
+
+// render函数
+function Render(obj, root) {
+  const el = document.createElement(obj.tag);
+  if (typeof obj.children === 'string') {
+    const text = document.createTextNode(obj.children);
+    el.appendChild(text);
+  } else if (obj.children) {
+    // 数组，递归调用 Render，使用 el 作为 root 参数
+    obj.children.forEach((child) => Render(child, el));
+  }
+  // 将元素添加到 root
+  root.appendChild(el);
+}
+
+// 调用。渲染到body下
+Render(obj, document.body);
+```
+
+### 运行时 + 编译时
+
+上述运行时框架，让我们用户不需要学习额外的知识，因为框架已经实现了。但是有一天，你的用户抱怨说：“手写树型结构的数据对象太麻烦了，而且不直观，能不能支持类似 HTML 标签的方式描述树型结构的数据对象呢？”
+
+为了满足用户的需求，我们开始改变结构，为这个转换过程编写一个 Compiler 程序：
+
+```javascript
+// html
+<div>
+  <span> hello world </span>
+</div>;
+
+// 编译成 ↓↓↓
+
+const obj = {
+  tag: 'div',
+  children: [{ tag: 'span', children: 'hello world' }],
+};
+```
+
+最后用户只需要分别调用 Compiler 函数跟 Render 函数就行：
+
+```javascript
+const html = `
+<div>
+  <span>hello world</span>
+</div>
+`;
+// 调用 Compiler 编译得到树型结构的数据对象
+const obj = Compiler(html);
+// 再调用 Render 进行渲染
+Render(obj, document.body);
+```
+
+### 纯编译时
+
+很快我们发现，我们甚至可以再【运行时 + 编译时】的基础上把 Compiler 函数功能进一步优化，把 Render 也包含在里面，让函数把 HTML 代码编译成最终的样子：
+
+```javascript
+// html
+<div>
+  <span> hello world </span>
+</div>;
+
+// 编译成 ↓↓↓
+
+const div = document.createElement('div');
+const span = document.createElement('span');
+span.innerText = 'hello world';
+div.appendChild(span);
+document.body.appendChild(div);
+```
+
+### 三种框架设计的优缺点
+
+- 纯运行时：由于它没有编译的过程，因此我们没办法分析用户提供的内容。
+- 运行时 + 编译时：加入了编译步骤之后，我们可以分析用户提供的内容，看看哪些内容未来可能会改变，哪些内容永远不会改变，这样我们就可以在编译的时候提取这些信息，然后将其传递给 Render 函数，Render 函数得到这些信息之后，就可以做进一步的优化了。**（Vue.js 3 是这种框架）**
+- 纯编译时：由于不需要任何运行时，而是直接编译成可执行的 JavaScript 代码，因此性能可能会更好，但是这种做法有损灵活性，即用户提供的内容必须编译后才能用。**（Svelte 框架）**
