--- a/docs/view/js/vue设计与实现/第2章—框架设计的核心要素.md
+++ b/docs/view/js/vue设计与实现/第2章—框架设计的核心要素.md
@@ -3,3 +3,29 @@ title: 第2章—框架设计的核心要素
 author: kebobo
 date: '2023-12-15'
 ---
+
+## 提升用户的开发体验
+
+Vue3 的源码中，自定义了一个`initCustomFormatter`函数，这个函数就是用来在开发环境下初始化自定义 formatter 的。
+
+以 Chrome 为例，我们可以打开 DevTools 的设置，然后勾选“Console”→“Enable custom formatters”选项。
+
+![图片](https://res.weread.qq.com/wrepub/CB_3300028078_image00492.jpeg)
+
+## 控制框架代码的体积
+
+Vue 会有一个构建工具设置预定义的常量`__DEV__`作为开关，在构建资源时，控制一些告警的 warn 代码是否应该出现在构建产物里面。
+
+```javascript
+if (__DEV__ && !res) {
+  warn(`Failed to mount app: mount target selector "${container}" returned null.`);
+}
+```
+
+如实例的代码中，如果`__DEV__`为 false，里面的 warn 将不会出现在构建产物 vue.global.prod.js 里面，因为已经被移除了，反之会出现在 vue.global.js 上。（两个文件分别是开发环境，跟生产环境下的产物）
+
+## Tree-Shaking
+
+Tree-Shaking 指的就是消除那些永远不会被执行的代码，也就是排除 dead code，现在无论是 rollup.js 还是 webpack，都支持 Tree-Shaking。
+
+想要实现 Tree-Shaking，必须满足一个条件，即模块必须是 ESM（ES Module），因为 Tree-Shaking 依赖 ESM 的静态结构。
